# news_provider_challenge

./: Dockerfile  Makefile  README.md  pyproject.toml
docker/development/: .env  docker-dev.yml
docker/production/: .env  docker-prod.yml
news_provider/: settings.py
news_provider/news_provider/: settings.py  urls.py
news_provider/news_provider/apps/news/: admin.py  models.py  routes.py  serializers.py  views.py
news_provider/news_provider/apps/news/migrations/: 0001_initial.py  0002_alter_author_name.py
news_provider/news_provider/apps/users/: admin.py  models.py  routes.py  serializers.py  views.py
news_provider/news_provider/apps/users/migrations/: 0001_initial.py  0002_create_default_superuser.py
nginx/: Dockerfile  nginx.conf
postman/: news_provider_api.postman_collection.json
