[tool.poetry]
name = "news_provider"
version = "0.1.0"
description = ""
authors = ["Kyzard0 <diego_rafael_97@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.4"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
